[gd_scene load_steps=2 format=3 uid="uid://slvkledned3b"]

[ext_resource type="Script" path="res://control.gd" id="1_fkxtu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkxtu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="clear" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="ticker" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="last_what" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Amount of what at:"
horizontal_alignment = 1

[node name="date_time" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Last"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="amount" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Amount"
scroll_fit_content_height = true
caret_blink = true

[node name="what" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What"

[node name="punch" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Punch!"

[connection signal="pressed" from="MarginContainer/VBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/date_time" to="." method="_on_date_time_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/date_time" to="." method="_on_date_time_mouse_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/amount" to="." method="_on_amount_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/punch" to="." method="_on_punch_pressed"]
